<resources>
    <string name="app_name">Brandeis Ticketing System</string>
    <string name="enter_email">Please enter an email address</string>
    <string name="enter_password">Please enter a password</string>
    <string name="user_name">userName</string>
    <string name="email_address">emailAddress</string>
    <string name="password">password</string>
    <string name="add_event">Add Event</string>
    <string name="name_label">Name</string>
    <string name="location_label">Location</string>
    <string name="time_label">Time</string>
    <string name="save_button">SAVE</string>
    <string name="cancel_button">CANCEL</string>
    <string name="delete_button">DELETE</string>
    <string name="view_events_button">Buy Tickets</string>
    <string name="view_tickets_button">My Tickets</string>
    <string name="my_info_button">My info</string>
    <string name="add_button">Purchase Ticket</string>
    <string name="ticket_view">View Ticket</string>
    <string name="create_event_button">Create an event</string>
    <string name="edit_event_button">Edit an event</string>
    <string name="qr_reader">QR Reader</string>
    <string name="qr_generator">Generate QR Code</string>
    <string name="create_event_intent">createEventIntent</string>
    <string name="unique_qr_id">Unique ID</string>  handleResult
    <string name="handleResult">handleResult</string>
    <string name="scanResult">"Scan result"</string>
    <string name="brandeis">brandeis</string>
</resources>
