<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="edu.brandeis.cs.nishanacharya.brandeisticketingsystem.HomeActivity"
    android:background="@color/grey">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/appBarTheme"
        app:popupTheme="@style/appBarTheme" />
    <View
        android:paddingTop="20sp"
        android:layout_marginTop="60sp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/offblack" />

    <Button
        android:id="@+id/events_button"
        android:background="@android:color/transparent"
        android:paddingTop="20sp"
        android:layout_marginLeft="10sp"
        android:paddingBottom="20sp"
        android:theme="@style/AppTheme.Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/view_events_button"
        app:layout_constraintStart_toStartOf="@+id/tickets_button"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/offblack" />

    <Button
        android:id="@+id/tickets_button"
        android:background="@android:color/transparent"
        android:paddingTop="20sp"
        android:layout_marginLeft="10sp"
        android:paddingBottom="20sp"
        android:theme="@style/AppTheme.Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_tickets_button"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/events_button" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/offblack" />

    <Button
        android:id="@+id/button3"
        android:background="@android:color/transparent"
        android:paddingTop="20sp"
        android:layout_marginLeft="10sp"
        android:paddingBottom="20sp"
        android:theme="@style/AppTheme.Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/my_info_button"
        app:layout_constraintStart_toStartOf="@+id/tickets_button"
        app:layout_constraintTop_toBottomOf="@+id/tickets_button" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/offblack" />

    <Button
        android:id="@+id/signOutButton"
        android:theme="@style/AppTheme.Button"
        android:layout_marginTop="30sp"
        android:text = "Logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</LinearLayout>